Auth + routes updates; ignore env/uploads; fix Windows reserved-name issue

--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,19 @@ dist
 .DS_Store
 server/public
 vite.config.ts.*
-*.tar.gz
+*.tar.gz# dependencies / builds / caches
+node_modules/
+dist/
+build/
+.turbo/
+.next/
+.cache/
+
+# uploads & temp
+uploads/
+
+# env & local configs
+.env
+client/.env
+.claude/
+*.local.json
